--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -1325,7 +1325,7 @@ representative of it, can be contacted.</td>
                           
                         </td>
                         <td property="rdfs:comment">The value of this property is the Identifier itself.</td>
-                        <td property="skos:scopeNote">Example: "abc-12345-de"^^<https://belgium.be/scheme/nationalIDnumber>.</td>
+                        <td property="skos:scopeNote">Example: "abc-12345-de"^^&lt;https://belgium.be/scheme/nationalIDnumber&gt;.</td>
                         <td></td>
                       </tr>
                     
