--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -2101,7 +2101,7 @@ between Organizations in a hierarchical structure. </td>
                 (non-normative)
                 
 <p>
-A changelog describing the (major) changes to the previous version (1.0.0) of the Core Public Organization Vocabulary and the new version that is being proposed in this specification (2.0.0), can be found <a href="">here</a>.
+A changelog describing the (major) changes to the previous version (1.0.0) of the Core Public Organization Vocabulary and the new version that is being proposed in this specification (2.0.0), can be found <a href="https://github.com/SEMICeu/CPOV/blob/master/releases/2.00/Changelog.md">here</a>.
 <p>
 
             </div>
