fix URI of OrganizationalUnit

--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -1506,7 +1506,7 @@ representative of it, can be contacted.</td>
             </div>
             
               <div class="region region--no-space-top">
-              <h3 class="h3" id="Organizational Unit"><a href="http://www.w3.org/ns/org#hasUnit" data-toggle="tooltip" data-content="http://www.w3.org/ns/org#hasUnit" data-placement="right">Organizational Unit</a></h3>
+              <h3 class="h3" id="Organizational Unit"><a href="http://www.w3.org/ns/org#OrganizationalUnit" data-toggle="tooltip" data-content="http://www.w3.org/ns/org#OrganizationalUnit" data-placement="right">Organizational Unit</a></h3>
                 <div class="region region--no-space-top">
                   <dl>
                     <dt>Description</dt><dd>An Organizational Unit is a subclass of Organization but conceptually does not exist in its own right.</dd>
