--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -191,7 +191,7 @@
               <div class="head" role="metainfo" id="metainfo">
               <dl>
               <dt>Source</dt><dd><a href="https://github.com/SEMICeu/CPOV/tree/master/releases/2.00">https://github.com/SEMICeu/CPOV/tree/master/releases/2.00</a></dd>
-              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/0442f3dbad04be1d7158c075a9a74ef9cb51f717/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/0442f3dbad04be1d7158c075a9a74ef9cb51f717/CHANGELOG</a></dd>-->
+              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/635e74b281c0f83d627cf1ba6637457654e2beae/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/635e74b281c0f83d627cf1ba6637457654e2beae/CHANGELOG</a></dd>-->
               <dt>Feedback</dt><dd><a href="https://github.com/SEMICeu/CPOV/issues">https://github.com/SEMICeu/CPOV/issues</a></dd>
               <!--<dt>Registry of standards</dt><dd><a href="CPOV">CPOV</a></dd>-->
 
@@ -1798,7 +1798,7 @@ A changelog describing the (major) changes to the previous version (1.0.0) of th
                 <h2 class="h2" aria-level="1" role="heading" id="h2_sotd">JSON-LD context</h2>
                 (non-normative)
                 
-		<p>A reusable JSON-LD context definition for this Core Vocabulary is retrievable at: <a href="/doc/core-vocabulary/core-public-organisation/context/core-public-organisation-ap_en.jsonld" target="_blank">/doc/core-vocabulary/core-public-organisation/context/core-public-organisation-ap_en.jsonld</a></p>
+		<p>A reusable JSON-LD context definition for this Core Vocabulary is retrievable <a href="./context/core-public-organisation-ap.jsonld" target="_blank">here</a></p>
                 
             </div>
 	    <!--
