fixed has member

--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -191,7 +191,7 @@
               <div class="head" role="metainfo" id="metainfo">
               <dl>
               <dt>Source</dt><dd><a href="https://github.com/SEMICeu/CPOV/tree/master/releases/2.00">https://github.com/SEMICeu/CPOV/tree/master/releases/2.00</a></dd>
-              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/95d1d592d91fde1ac4194bd9b0452bd9eead43eb/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/95d1d592d91fde1ac4194bd9b0452bd9eead43eb/CHANGELOG</a></dd>-->
+              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/7e1f03431dcf69ff22300a645568cea884844555/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/7e1f03431dcf69ff22300a645568cea884844555/CHANGELOG</a></dd>-->
               <dt>Feedback</dt><dd><a href="https://github.com/SEMICeu/CPOV/issues">https://github.com/SEMICeu/CPOV/issues</a></dd>
               <!--<dt>Registry of standards</dt><dd><a href="CPOV">CPOV</a></dd>-->
 
@@ -1421,9 +1421,9 @@ This definition is consistent with the more detailed definition of a "public sec
                           
                         </td>
                         <td property="rdfs:comment">An Organization which is a member of another without being a sub organization, they are independent entities.</td>
-                        <td property="skos:scopeNote">The memberOf and hasMember properties are very simple and don't support statements describing the nature of the membership. The <a href="https://www.w3.org/TR/vocab-org/>W3C Organization Ontology</a> provides both this simple method and a more sophisticated model that does make it possible to, for example, provide information about the period of time in which one Organization was a member of another, the level of membership etc. That more sophisticated model should be used where necessary and may be used in addition to the simple memberOf/hasMember properties.
+                        <td property="skos:scopeNote">The memberOf and hasMember properties are very simple and don't support statements describing the nature of the membership. The <a href="https://www.w3.org/TR/vocab-org/">W3C Organization Ontology</a> provides both this simple method and a more sophisticated model that does make it possible to, for example, provide information about the period of time in which one Organization was a member of another, the level of membership etc. That more sophisticated model should be used where necessary and may be used in addition to the simple memberOf/hasMember properties.
 
-An example of memberships are the EU member states and other partners which could be represented via different legal entities as members of EFSA, the European Food Safety Agency:  https://www.efsa.europa.eu/en/partnersnetworks/euinstitutions</td>
+An example of memberships are the EU member states and other partners which could be represented via different legal entities as members of EFSA, the <a href="https://www.efsa.europa.eu/en/partnersnetworks/euinstitutions">European Food Safety Agency</a>  </td>
                         <td></td>
                       </tr>
                     
