CPOV: fix "next" definition

--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -191,7 +191,7 @@
               <div class="head" role="metainfo" id="metainfo">
               <dl>
               <dt>Source</dt><dd><a href="https://github.com/SEMICeu/CPOV/tree/master/releases/2.00">https://github.com/SEMICeu/CPOV/tree/master/releases/2.00</a></dd>
-              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/a1cb26faa6dd1c10eb3a56f2f88b730f26e15db7/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/a1cb26faa6dd1c10eb3a56f2f88b730f26e15db7/CHANGELOG</a></dd>-->
+              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/b228576cc0f60abd2c37d7682a94654e59dfdf20/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/b228576cc0f60abd2c37d7682a94654e59dfdf20/CHANGELOG</a></dd>-->
               <dt>Feedback</dt><dd><a href="https://github.com/SEMICeu/CPOV/issues">https://github.com/SEMICeu/CPOV/issues</a></dd>
               <!--<dt>Registry of standards</dt><dd><a href="CPOV">CPOV</a></dd>-->
 
@@ -1557,7 +1557,7 @@ An example of memberships are the EU member states and other partners which coul
 			    
                           
                         </td>
-                        <td property="rdfs:comment">In some cases, it is necessary to be able to create an ordered sequence of an organization that precede and succeed each other. To support this, the CPOV includes the well-known relationships of previous and next to allow such sequences to be captured and</td>
+                        <td property="rdfs:comment">In some cases, it is necessary to be able to create an ordered sequence of organizations that precede and succeed each other. To support this, the CPOV includes the well-known relationships of previous and next to allow such sequences to be captured and computed.</td>
                         <td property="skos:scopeNote">Examples of events leading to sequences could be renaming, splitting or merging of public organizations.</td>
                         <td></td>
                       </tr>
