Add RDF serializations

--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -191,7 +191,7 @@
               <div class="head" role="metainfo" id="metainfo">
               <dl>
               <dt>Source</dt><dd><a href="https://github.com/SEMICeu/CPOV/tree/master/releases/2.00">https://github.com/SEMICeu/CPOV/tree/master/releases/2.00</a></dd>
-              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/73e829b1e92e14c01ea88a422c5b512c483e5108/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/73e829b1e92e14c01ea88a422c5b512c483e5108/CHANGELOG</a></dd>-->
+              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/c21fbd1a24a8cbb0a98ac178e69da24497da68fa/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/c21fbd1a24a8cbb0a98ac178e69da24497da68fa/CHANGELOG</a></dd>-->
               <dt>Feedback</dt><dd><a href="https://github.com/SEMICeu/CPOV/issues">https://github.com/SEMICeu/CPOV/issues</a></dd>
               <!--<dt>Registry of standards</dt><dd><a href="CPOV">CPOV</a></dd>-->
 
@@ -1484,10 +1484,10 @@ An example of memberships are the EU member states and other partners which coul
                         <td></td>
                       </tr>
                     
-                      <tr id="Public%20Organisation%3Aidentifier" typeof="rdfs:Property" resource="http://www.w3.org/ns/org#identifier">
+                      <tr id="Public%20Organisation%3Aidentifier" typeof="rdfs:Property" resource="http://www.w3.org/ns/adms#identifier">
                         <td>
                           <code property="rdfs:label">
-                            <a href="http://www.w3.org/ns/org#identifier" data-toggle="tooltip" data-content="http://www.w3.org/ns/org#identifier" data-placement="right">
+                            <a href="http://www.w3.org/ns/adms#identifier" data-toggle="tooltip" data-content="http://www.w3.org/ns/adms#identifier" data-placement="right">
                             identifier</a>
                           </code>
                         </td>
@@ -1805,7 +1805,7 @@ A changelog describing the (major) changes to the previous version (1.0.0) of th
                 <h2 class="h2" aria-level="1" role="heading" id="h2_sotd">RDF representation</h2>
                 (non-normative)
                 
-		<p>A reusable RDF representation (in turtle) for this Core Vocabulary is retrievable <a href="./voc/core-public-organisation-ap.ttl" target="_blank">here</a>.
+		<p>A reusable RDF representation (in turtle) for this Core Vocabulary is retrievable <a href="./voc/core-public-organisation.ttl" target="_blank">here</a>.
 		<br>
                 This RDF file contains only the terminology for which the URI is minted in the Core Vocabularies domain http://data.europa.eu/m8g.
                 Terms that are mapped on an existing URI (hence reused from other vocabularies) are not included.
