--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -1866,10 +1866,10 @@ A changelog describing the (major) changes to the previous version (1.0.0) of th
                                   <a href="#changelog">Changelog</a>
                               </li>
                               <li class="side-navigation__item">
-                                  <a href="#jsonld">UML representation</a>
+                                  <a href="#uml">UML representation</a>
                               </li>
                               <li class="side-navigation__item">
-                                  <a href="#jsonld">RDF representation</a>
+                                  <a href="#rdf">RDF representation</a>
                               </li>
                               <li class="side-navigation__item">
                                   <a href="#jsonld">JSON-LD context</a>
