update AddressId and Organization

--- a/releases/2.00/index.html
+++ b/releases/2.00/index.html
@@ -191,7 +191,7 @@
               <div class="head" role="metainfo" id="metainfo">
               <dl>
               <dt>Source</dt><dd><a href="https://github.com/SEMICeu/CPOV/tree/master/releases/2.00">https://github.com/SEMICeu/CPOV/tree/master/releases/2.00</a></dd>
-              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/5ef2af0b9e9135d1af1ac60e245b607a0d9038ac/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/5ef2af0b9e9135d1af1ac60e245b607a0d9038ac/CHANGELOG</a></dd>-->
+              <!--<dt>Changelog</dt><dd><a href="git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/07b328e8f8810654a2dda3bd58aa64d19d91f7d4/CHANGELOG">git@uri.semic.eu-thema:SEMICeu/uri.semic.eu-thema.git/blob/07b328e8f8810654a2dda3bd58aa64d19d91f7d4/CHANGELOG</a></dd>-->
               <dt>Feedback</dt><dd><a href="https://github.com/SEMICeu/CPOV/issues">https://github.com/SEMICeu/CPOV/issues</a></dd>
               <!--<dt>Registry of standards</dt><dd><a href="CPOV">CPOV</a></dd>-->
 
@@ -398,10 +398,10 @@ This class belongs to <a href="https://semiceu.github.io/Core-Location-Vocabular
                         <td></td>
                       </tr>
                     
-                      <tr id="Address%3Aaddress%20ID" typeof="rdfs:Property" resource="http://www.w3.org/ns/locn#addressID">
+                      <tr id="Address%3Aaddress%20ID" typeof="rdfs:Property" resource="http://www.w3.org/ns/locn#addressId">
                         <td>
                           <code property="rdfs:label">
-                            <a href="http://www.w3.org/ns/locn#addressID" data-toggle="tooltip" data-content="http://www.w3.org/ns/locn#addressID" data-placement="right">
+                            <a href="http://www.w3.org/ns/locn#addressId" data-toggle="tooltip" data-content="http://www.w3.org/ns/locn#addressId" data-placement="right">
                             address ID</a>
                           </code>
                         </td>
@@ -1157,7 +1157,7 @@ The key difference between a locator and a locator name is that the latter is a 
             </div>
             
               <div class="region region--no-space-top">
-              <h3 class="h3" id="Organization"><a href="http://www.w3.org/ns/org#organization" data-toggle="tooltip" data-content="http://www.w3.org/ns/org#organization" data-placement="right">Organization</a></h3>
+              <h3 class="h3" id="Organization"><a href="http://www.w3.org/ns/org#Organization" data-toggle="tooltip" data-content="http://www.w3.org/ns/org#Organization" data-placement="right">Organization</a></h3>
                 <div class="region region--no-space-top">
                   <dl>
                     <dt>Definition</dt><dd>A collection of people organized together into a community or other social, commercial or political structure. The group has some common purpose or reason for existence which goes beyond the set of people belonging to it and can act as an Agent. Organizations are often decomposable into hierarchical structures.</dd>
